# marc

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  TODO.md  config.h.in  configure  configure.ac  fields.c  fields.h  main.DEPRECATED.c  main.c  marc-dump.c  marc-leaders.c  marc-print.c  marc-validate.c  marc-xml.c  marc.c  marc.h  util.c  util.h
c/: LICENSE  README.md  TODO.md  marc.c  marc.h
go/: .gitignore  Makefile  main.go
go/src/marc/: constants.go  field.go  marc.go  reader.go  record.go  util.go
java/: .gitignore  Makefile  README  build.xml
java/src/marc/: Constants.java  ControlField.java  DataField.java  Field.java  Main.java  MarcField.java  MarcReader.java  MarcRecord.java  MarcSubfield.java  Reader.java  Record.java  Subfield.java  Util.java
java/test/: marc-dump
test/: dynamic-alloc.c  fieldspec-examples.txt  marc-245ab  marc-260  marc-dump  marc-leaders  marc-print  marc-validate  marc-xml  test-dynamic-alloc  testfile.marc  valgrind  valgrind-245ab  valgrind-260  valgrind-dump  valgrind-dynamic-alloc  valgrind-leaders  valgrind-print  valgrind-validate  valgrind-xml
